--- a/package.json
+++ b/package.json
@@ -24,27 +24,23 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"test": "jest"
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.3.6",
-		"nuxt": "^2.0.0",
-		"nuxt-property-decorator": "^2.5.1"
+		"nuxt": "^2.0.0"
 	},
 	"devDependencies": {
-		"@nuxtjs/eslint-config": "^1.0.1",
-		"@nuxtjs/eslint-module": "^1.0.0",
+		"@nuxt/typescript-build": "^0.5.7",
 		"@nuxtjs/stylelint-module": "^3.1.0",
 		"@vue/test-utils": "^1.0.0-beta.27",
-		"babel-eslint": "^10.0.1",
 		"babel-jest": "^24.1.0",
-		"eslint": "^6.1.0",
-		"eslint-config-prettier": "^4.1.0",
-		"eslint-plugin-nuxt": ">=0.4.2",
-		"eslint-plugin-prettier": "^3.0.1",
+		"eslint-config-prettier": "^6.10.0",
+		"eslint-plugin-prettier": "^3.1.2",
 		"jest": "^24.1.0",
-		"prettier": "^1.16.4",
+		"node-sass": "^4.13.1",
+		"prettier": "^1.19.1",
+		"sass-loader": "^8.0.2",
 		"stylelint": "^10.1.0",
 		"stylelint-config-standard": "^19.0.0",
 		"vue-jest": "^4.0.0-0"
