--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"@nuxtjs/axios": "^5.3.6",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"nuxt": "^2.0.0",
-		"nuxt-property-decorator": "^2.5.1"
+		"nuxt-property-decorator": "^2.5.1",
+		"prismic-dom": "^2.1.0"
 	},
 	"devDependencies": {
 		"@nuxt/typescript-build": "^0.5.7",
 		"@nuxtjs/stylelint-module": "^3.1.0",
+		"@types/prismic-dom": "^2.1.1",
 		"@vue/test-utils": "^1.0.0-beta.27",
 		"babel-jest": "^24.1.0",
 		"eslint-config-prettier": "^6.10.0",
@@ -45,6 +47,7 @@
 		"sass-loader": "^8.0.2",
 		"stylelint": "^10.1.0",
 		"stylelint-config-standard": "^19.0.0",
+		"eslint": "^6.8.0",
 		"vue-jest": "^4.0.0-0"
 	}
 }
