--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"@nuxtjs/style-resources": "^1.0.0",
 		"nuxt": "^2.0.0",
 		"nuxt-property-decorator": "^2.5.1",
-		"prismic-dom": "^2.1.0"
+		"prismic-dom": "^2.1.0",
+		"prismic-vue": "https://github.com/prismicio/prismic-vue.git#nuxt"
 	},
 	"devDependencies": {
 		"@nuxt/typescript-build": "^0.5.7",
@@ -39,6 +40,7 @@
 		"@types/prismic-dom": "^2.1.1",
 		"@vue/test-utils": "^1.0.0-beta.27",
 		"babel-jest": "^24.1.0",
+		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"jest": "^24.1.0",
@@ -47,7 +49,6 @@
 		"sass-loader": "^8.0.2",
 		"stylelint": "^10.1.0",
 		"stylelint-config-standard": "^19.0.0",
-		"eslint": "^6.8.0",
 		"vue-jest": "^4.0.0-0"
 	}
 }
