--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@nuxtjs/axios": "^5.3.6",
 		"@nuxtjs/style-resources": "^1.0.0",
+		"kinet": "^2.2.1",
 		"nuxt": "^2.0.0",
 		"nuxt-property-decorator": "^2.5.1",
 		"prismic-dom": "^2.1.0",
@@ -49,6 +50,7 @@
 		"sass-loader": "^8.0.2",
 		"stylelint": "^10.1.0",
 		"stylelint-config-standard": "^19.0.0",
+		"tslint": "^6.0.0",
 		"vue-jest": "^4.0.0-0"
 	}
 }
