--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ pre:
     paths:
       - ./node_modules
   cache:
+    policy: pull
     key:
       files:
         - package.json
@@ -34,6 +35,7 @@ build:acc:
     paths:
       - ./dist
   cache:
+    policy: pull
     key:
       files:
         - package.json
@@ -60,6 +62,7 @@ build:prd:
     paths:
       - ./dist
   cache:
+    policy: pull
     key:
       files:
         - package.json
@@ -87,7 +90,8 @@ deploy:acc:
       refs:
           - staging
   script:
-      - cd dist && aws s3 sync --delete . s3://$AWS_S3_BUCKET
+      - cd dist
+      # - cd dist && aws s3 sync --delete . s3://$AWS_S3_BUCKET
 
 deploy:prd:
   stage: deploy
@@ -103,4 +107,5 @@ deploy:prd:
       refs:
           - master
   script:
-      - cd dist && aws s3 sync --delete . s3://$AWS_S3_BUCKET
+      - cd dist
+      # - cd dist && aws s3 sync --delete . s3://$AWS_S3_BUCKET
