--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.3.6",
+		"@nuxtjs/prismic": "^1.1.1",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"kinet": "^2.2.1",
-		"nuxt": "^2.0.0",
+		"nuxt": "^2.11.0",
 		"nuxt-property-decorator": "^2.5.1",
-		"prismic-dom": "^2.1.0",
-		"prismic-vue": "https://github.com/prismicio/prismic-vue.git#nuxt"
+		"prismic-vue": "^2.0.0"
 	},
 	"devDependencies": {
 		"@nuxt/typescript-build": "^0.5.7",
