--- a/package.json
+++ b/package.json
@@ -27,30 +27,31 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@nuxtjs/axios": "^5.3.6",
+		"@nuxtjs/axios": "^5.9.6",
 		"@nuxtjs/prismic": "^1.1.1",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"kinet": "^2.2.1",
-		"nuxt": "^2.11.0",
+		"nuxt": "^2.12.1",
 		"nuxt-property-decorator": "^2.5.1",
+		"prismic-javascript": "^2.1.5",
 		"prismic-vue": "^2.0.0"
 	},
 	"devDependencies": {
-		"@nuxt/typescript-build": "^0.5.7",
-		"@nuxtjs/stylelint-module": "^3.1.0",
+		"@nuxt/typescript-build": "^0.6.1",
+		"@nuxtjs/stylelint-module": "^3.2.2",
 		"@types/prismic-dom": "^2.1.1",
-		"@vue/test-utils": "^1.0.0-beta.27",
-		"babel-jest": "^24.1.0",
+		"@vue/test-utils": "^1.0.0-beta.32",
+		"babel-jest": "^25.2.4",
 		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.0",
+		"eslint-config-prettier": "^6.10.1",
 		"eslint-plugin-prettier": "^3.1.2",
-		"jest": "^24.1.0",
+		"jest": "^25.2.4",
 		"node-sass": "^4.13.1",
-		"prettier": "^1.19.1",
+		"prettier": "^2.0.2",
 		"sass-loader": "^8.0.2",
-		"stylelint": "^10.1.0",
-		"stylelint-config-standard": "^19.0.0",
-		"tslint": "^6.0.0",
-		"vue-jest": "^4.0.0-0"
+		"stylelint": "^13.2.1",
+		"stylelint-config-standard": "^20.0.0",
+		"tslint": "^6.1.0",
+		"vue-jest": "^3.0.5"
 	}
 }
