--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ build:acc:
     paths:
       - ./dist
   cache:
+    policy: pull
     key:
       files:
         - package.json
@@ -40,6 +41,7 @@ build:prd:
     paths:
       - ./dist
   cache:
+    policy: pull
     key:
       files:
         - package.json
