--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "TFE",
+	"name": "tfe",
 	"version": "1.0.0",
 	"description": "theFactor.e website",
 	"theme_color": "#fff",
@@ -38,6 +38,7 @@
 		"prismic-vue": "^2.0.0"
 	},
 	"devDependencies": {
+		"@nuxtjs/dotenv": "^1.4.1",
 		"@nuxtjs/stylelint-module": "^3.2.2",
 		"@vue/test-utils": "^1.0.0-beta.32",
 		"babel-jest": "^25.2.4",
