--- a/package.json
+++ b/package.json
@@ -29,13 +29,11 @@
 	"dependencies": {
 		"@nuxtjs/axios": "^5.9.6",
 		"@nuxtjs/gtm": "^2.2.3",
-		"@nuxtjs/prismic": "^1.1.1",
+		"@nuxtjs/prismic": "^1.2.1",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"kinet": "^2.2.1",
 		"nuxt": "^2.12.1",
-		"nuxt-property-decorator": "^2.5.1",
-		"prismic-javascript": "^2.1.5",
-		"prismic-vue": "^2.0.0"
+		"nuxt-property-decorator": "^2.5.1"
 	},
 	"devDependencies": {
 		"@nuxtjs/dotenv": "^1.4.1",
@@ -52,5 +50,8 @@
 		"stylelint": "^13.2.1",
 		"stylelint-config-standard": "^20.0.0",
 		"vue-jest": "^3.0.5"
+	},
+	"engines": {
+		"node": ">= 8.0.0"
 	}
 }
