--- a/package.json
+++ b/package.json
@@ -28,21 +28,28 @@
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.9.6",
+		"@nuxtjs/device": "^1.2.7",
 		"@nuxtjs/gtm": "^2.2.3",
 		"@nuxtjs/prismic": "^1.2.1",
 		"@nuxtjs/style-resources": "^1.0.0",
+		"@prismicio/vue": "^2.0.7",
+		"aos": "^3.0.0-beta.6",
 		"kinet": "^2.2.1",
 		"nuxt": "^2.12.1",
 		"nuxt-property-decorator": "^2.5.1"
 	},
 	"devDependencies": {
 		"@nuxtjs/dotenv": "^1.4.1",
+		"@nuxtjs/eslint-config": "^2.0.2",
+		"@nuxtjs/eslint-module": "^1.2.0",
 		"@nuxtjs/stylelint-module": "^3.2.2",
 		"@vue/test-utils": "^1.0.0-beta.32",
+		"babel-eslint": "^10.1.0",
 		"babel-jest": "^25.2.4",
 		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.1",
-		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-nuxt": ">=0.5.2",
+		"eslint-plugin-prettier": "^3.1.3",
 		"jest": "^25.2.4",
 		"node-sass": "^4.13.1",
 		"prettier": "^2.0.2",
@@ -52,6 +59,6 @@
 		"vue-jest": "^3.0.5"
 	},
 	"engines": {
-		"node": ">= 8.0.0"
+		"node": ">= 12.0.0"
 	}
 }
