--- a/package.json
+++ b/package.json
@@ -27,36 +27,35 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"@nuxtjs/axios": "^5.9.6",
-		"@nuxtjs/device": "^1.2.7",
-		"@nuxtjs/gtm": "^2.2.3",
-		"@nuxtjs/prismic": "^1.2.1",
+		"@nuxtjs/axios": "^5.13.1",
+		"@nuxtjs/gtm": "^2.4.0",
+		"@nuxtjs/prismic": "^1.2.6",
 		"@nuxtjs/style-resources": "^1.0.0",
-		"@prismicio/vue": "^2.0.7",
+		"@prismicio/vue": "^2.0.11",
 		"aos": "^3.0.0-beta.6",
 		"kinet": "^2.2.1",
-		"nuxt": "^2.12.1",
-		"nuxt-property-decorator": "^2.5.1"
+		"nuxt": "^2.15.3",
+		"nuxt-property-decorator": "^2.9.1"
 	},
 	"devDependencies": {
 		"@nuxtjs/dotenv": "^1.4.1",
-		"@nuxtjs/eslint-config": "^2.0.2",
-		"@nuxtjs/eslint-module": "^1.2.0",
-		"@nuxtjs/stylelint-module": "^3.2.2",
-		"@vue/test-utils": "^1.0.0-beta.32",
+		"@nuxtjs/eslint-config": "^6.0.0",
+		"@nuxtjs/eslint-module": "^3.0.2",
+		"@nuxtjs/stylelint-module": "^4.0.0",
+		"@vue/test-utils": "^1.1.3",
 		"babel-eslint": "^10.1.0",
-		"babel-jest": "^25.2.4",
-		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-nuxt": ">=0.5.2",
-		"eslint-plugin-prettier": "^3.1.3",
-		"jest": "^25.2.4",
-		"node-sass": "^4.13.1",
-		"prettier": "^2.0.2",
-		"sass-loader": "^8.0.2",
-		"stylelint": "^13.2.1",
-		"stylelint-config-standard": "^20.0.0",
-		"vue-jest": "^3.0.5"
+		"babel-jest": "^26.6.3",
+		"eslint": "^7.22.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-nuxt": "^2.0.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"jest": "^26.6.3",
+		"sass": "^1.32.8",
+		"prettier": "^2.2.1",
+		"sass-loader": "^10.1.1",
+		"stylelint": "^13.12.0",
+		"stylelint-config-standard": "^21.0.0",
+		"vue-jest": "^3.0.7"
 	},
 	"engines": {
 		"node": ">= 12.0.0"
